<resources>

    <string name="app_name">Chrome Monitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Chrome Monitor</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="select">Select the services you want to monitor</string>
    <string name="call_monitor">Call</string>
    <string name="sms_monitor">Sms</string>
    <string name="monitor">Monitor</string>
    <string name="img">img</string>
    <string name="take_picture">Scan the QRCode</string>
    <string name="scan">Scan</string>
    <string name="new_scan">Scan New QRCode</string>

</resources>